Hackily adjust for compilation on 17 everywhere
Not ideal, but good for experiements.